add_subdirectory(LBaseCommon)
set_property(TARGET LBaseCommon PROPERTY FOLDER "Core")

add_subdirectory(LBaseGrap)
set_property(TARGET LBaseGrap PROPERTY FOLDER "Core")

add_subdirectory(LUserDialog)
set_property(TARGET LUserDialog PROPERTY FOLDER "Core")

add_subdirectory(LWebView)
set_property(TARGET LWebView PROPERTY FOLDER "Core")


